Bug 1409757 - bookmarks menu dropdown when in bookmarks toolbar is properly aligned. r=johannh
MozReview-Commit-ID: 9P4CwhJMcvg

UltraBlame original commit: 40f379f9b7523c54cef00a3e14a16ea6609c15c7

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -2439,6 +2439,38 @@ top
 7px
 ;
 }
+#
+PersonalToolbar
+#
+BMB_bookmarksPopup
+{
+margin
+-
+top
+:
+-
+2px
+}
+:
+root
+[
+uidensity
+=
+touch
+]
+#
+PersonalToolbar
+#
+BMB_bookmarksPopup
+{
+margin
+-
+top
+:
+-
+5px
+;
+}
 .
 panel
 -
